# verify

./: .env.production.example  .gitignore  ARCHITECTURE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ANALYSIS.md  MISTRAL_PROMPTS.md  PRODUCTION_SETUP.md  README.md  SETUP.md  SETUP_SOTA.md  TECH_STACK.md  UPGRADE_SUMMARY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  DATABASE_SCHEMA.md  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: health.py  projects.py  sentences.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: documents.py  projects.py  verification.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  session.py
backend/app/schemas/: document.py  project.py  verification.py
backend/app/services/: document_processor.py  embedding_service.py  excel_export.py  langchain_service.py  mistral_service.py  storage_service.py  vector_store.py  verification_service.py  verification_service_mistral.py
backend/app/tasks/: celery_app.py  document_tasks.py  verification_tasks.py
frontend/: .npmrc  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/projects/[id]/: page.tsx  project-detail-client.tsx
frontend/app/dashboard/projects/[id]/verify/: page.tsx
frontend/app/dashboard/projects/new/: page.tsx
frontend/components/: VerificationViewer.tsx  error-boundary.tsx
frontend/components/ui/: alert.tsx  badge.tsx
frontend/components/verification/: document-skeleton.tsx  project-card-skeleton.tsx  sentence-skeleton.tsx
frontend/services/: client.ts  index.ts  projects.ts  sentences.ts  types.ts
frontend/types/: index.ts
