[tool.poetry]
name = "ipo-verification-backend"
version = "1.0.0"
description = "AI-powered IPO document verification system with citation tracking"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI and server
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-socketio = "^5.11.0"

# Database
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

# Supabase (includes Storage)
supabase = "^2.3.4"
storage3 = "^0.7.0"

# Celery and task queue
celery = "^5.3.6"
redis = "^5.0.1"
kombu = "^5.3.5"
flower = "^2.0.1"

# Langchain and LLM
langchain = "^0.1.4"
langchain-community = "^0.0.16"
langchain-google-genai = "^0.0.6"
langchain-openai = "^0.0.5"
langchain-mistralai = "^0.0.5"
google-generativeai = "^0.3.2"
langchain-core = "^0.1.14"
openai = "^1.10.0"
mistralai = "^0.1.8"

# Vector store
weaviate-client = "^4.4.1"

# Document processing
PyPDF2 = "^3.0.1"
pdfplumber = "^0.10.3"
python-docx = "^1.1.0"
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"
pypdf = "^4.0.1"

# Text processing
nltk = "^3.8.1"
spacy = "^3.7.2"
textstat = "^0.7.3"
tiktoken = "^0.5.2"

# Utilities
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
loguru = "^0.7.2"

# Caching
aiocache = "^0.12.2"
msgpack = "^1.0.7"

# Monitoring and performance
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
slowapi = "^0.1.9"

# Security
python-dotenv = "^1.0.0"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
